fixed some bugs on mobile and easier on the eyes

--- a/src/index.css
+++ b/src/index.css
@@ -179,6 +179,11 @@ section.about-me {
     max-width: 400px !important;
     min-height: 400px !important;
   }
+  section.about-me{
+    max-width: 90%;
+    padding: 20px;
+    text-align: center;
+  }
 }
 
 @media (max-width: 768px) {
@@ -265,12 +270,12 @@ div.main-photo-container {
 }
 
 section.about-me h2 {
-  padding-bottom: 30px;
+  padding: 20px;
 }
 
 .icon {
-  width: 36px;
-  height: 36px;
+  max-width: 36px;
+  max-height: 36px;
   filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(183deg)
     brightness(106%) contrast(106%);
   transition: transform 0.2s ease-in-out, filter 0s ease-in-out;
@@ -287,7 +292,12 @@ div.icon-container {
   padding-top: 20px;
   display: flex;
   justify-content: end;
+  align-items: center;
   gap: 30px;
+
+}
+div.icon-container p{
+  font-size: 1em;
 }
 
 .project-icon {
@@ -304,6 +314,7 @@ main {
 
 main h2 {
   padding-bottom: 30px;
+  text-align: center;
 }
 
 main div.project-container {
